fixed shotcuts alignment to correct position

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -3792,7 +3792,7 @@ textarea{
 
 #boldText {
   cursor: pointer;
-  margin-left: 10%;
+  margin-left: 5%;
   position: relative;
   bottom: 10%;
 }
@@ -3827,7 +3827,7 @@ textarea{
 }
 #img {
     cursor: pointer;
-    margin-left: 6%;
+    margin-left: 4%;
 }
 #insert-photo {
     position: absolute;
@@ -3835,7 +3835,7 @@ textarea{
 }
 #link {
     cursor: pointer;
-    margin-left: 4%;
+    margin-right: 9.5%;
 }
 #linkFabBtnImg {
     position: absolute;
@@ -3878,9 +3878,47 @@ textarea{
   background-color: rgb(200, 200, 200);
 }
 
+#headerType4 {
+  cursor: pointer;
+  color: #000;
+  font-size: 10px;
+  padding: 8px 5px 5px 13px;
+  background-color: #fff;
+}
+
+#headerType4:hover {
+  background-color: rgb(200, 200, 200);
+}
+
+
+#headerType5 {
+  cursor: pointer;
+  color: #000;
+  font-size: 9px;
+  padding: 8px 5px 5px 13px;
+  background-color: #fff;
+}
+
+#headerType5:hover {
+  background-color: rgb(200, 200, 200);
+}
+
+
+#headerType6 {
+  cursor: pointer;
+  color: #000;
+  font-size: 8px;
+  padding: 8px 5px 5px 13px;
+  background-color: #fff;
+}
+
+#headerType6:hover {
+  background-color: rgb(200, 200, 200);
+}
+
 .headerType {
   cursor: pointer;
-  margin-left: 5%;
+  margin-left: 9%;
   position: relative;
   bottom: 10%;
 }
@@ -3893,8 +3931,8 @@ textarea{
   max-width: 63px;
   position: absolute;
   z-index: 2000;
-  right: 75px;
-  background-color: rgba(0, 0, 0, 0);
+  right: 0px;
+  background-color: rgba(255, 255, 255, 255);
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.19), 0px 6px 6px rgba(0, 0, 0, 0.3);
 }
 
